--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,15 @@
 }
 body{
 font-family: 'Nunito Sans', sans-serif;
-overflow: hidden;
+/* overflow: hidden; */
+}
+.btn{
+    background-color: gray;
+    float: left;
+    width: 15%;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 10px;
 }
 
 .outer{
